# ezlanguage

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README_fr.md  makefile
color_schemes/vscode/: README.md
examples/: all_tests.sh  example.ez  other_tests.sh  unvalid_tests.sh  valid_tests.sh
langage/documents_source/: EZ_Program_module.odt
language_documents/source_files/: Program_modules_et_cpp_Driss.odt
src/: EZ_language_compiler.lex  EZ_language_compiler.ypp  README.md  README_fr.md  aide.h  ezlanguage.cppcheck  global.h  main.cpp
src/addons/: README.md  String_addon.cpp  String_addon.h  debug.h  log.cpp  log.h
src/declarations/: Array.cpp  Array.h  Class.cpp  Class.h  CommonDeclaration.cpp  CommonDeclaration.h  CommonVar.cpp  CommonVar.h  Container.cpp  Container.h  Function.cpp  Function.h  Import.cpp  Import.h  List.cpp  List.h  Main.cpp  Main.h  Map.cpp  Map.h  Method.cpp  Method.h  MultipleVariable.cpp  MultipleVariable.h  Parameter.cpp  Parameter.h  Procedure.cpp  Procedure.h  README.md  Set.cpp  Set.h  Variable.cpp  Variable.h  Vector.cpp  Vector.h
src/hash_table/: ClassHashTable.cpp  ClassHashTable.h  ClassHashed.cpp  ClassHashed.h  FunctionHashed.cpp  FunctionHashed.h  HashTable.h  README.md  README_fr.md  ScopeHashTable.cpp  ScopeHashTable.h  Variable.cpp  Variable.h  VariableHashed.cpp  VariableHashed.h
src/instructions/: Affectation.cpp  Affectation.h  CppCode.cpp  CppCode.h  (+24 more)
tests/: 1_main_simple.ez  2_procedure_vide.ez  4_display_module.ez  5_user_inputs.ez  README.md  README_fr.md  basic_tests.sh  full_tests.sh  test_functions.sh
(+61 files in other folders)
